--- a/.gitignore
+++ b/.gitignore
@@ -81,9 +81,13 @@ celerybeat-schedule
 # virtualenv
 venv/
 ENV/
+venv
 
 # Spyder project settings
 .spyderproject
 
 # Rope project settings
 .ropeproject
+
+# IntelliJ/PyCharm
+.idea/
