--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ cache:
 env:
   global:
     - PIP_DOWNLOAD_CACHE=".pip_download_cache"
+    - GOOGLE_APPLICATION_CREDENTIALS=~Netflix-Skunkworks/cloudaux/tests/gcp/fixtures/testkey.json
 
 before_script:
   - python setup.py develop
