--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 matrix:
   include:
     - python: "2.7"
-    - python: "3.5"
+    - python: "3.6"
 
 cache:
   directories:
@@ -17,11 +17,18 @@ env:
 before_script:
 # - python setup.py develop
   - pip install -e .\[gcp\]
+  - pip install flake8
   - pip install pytest
   - pip install mock
   - pip install coveralls
 
 script:
+  # stop the build if there are Python syntax errors or undefined names
+  # FIXME: Add F821 to --select when Netflix-Skunkworks/cloudaux#63 is fixed
+  # ./cloudaux/aws/sns.py:132:2: F821 undefined name 'pagiated'
+  - flake8 . --count --select=E901,E999,F822,F823 --show-source --statistics
+  # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
+  - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
   - coverage run -m py.test tests || exit 1
 
 after_success:
