--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
 
-matrix:
-  include:
-    - python: "2.7"
-    - python: "3.6"
+python:
+  - "2.7"
+  - "3.6"
 
 cache:
   directories:
@@ -12,26 +11,16 @@ cache:
 env:
   global:
     - PIP_DOWNLOAD_CACHE=".pip_download_cache"
-    - GOOGLE_APPLICATION_CREDENTIALS=$TRAVIS_BUILD_DIR/tests/gcp/fixtures/testkey.json
+    - GOOGLE_APPLICATION_CREDENTIALS=$TRAVIS_BUILD_DIR/cloudaux/tests/gcp/fixtures/testkey.json
 
-before_script:
-# - python setup.py develop
-  - pip install -e .\[gcp\]
-  - pip install flake8
-  - pip install pytest
-  - pip install mock
-  - pip install coveralls
+
+install:
+  - pip install tox-travis coveralls
 
 script:
-  # stop the build if there are Python syntax errors or undefined names
-  # FIXME: Add F821 to --select when Netflix-Skunkworks/cloudaux#63 is fixed
-  - flake8 . --count --select=E901,E999,F822,F823 --show-source --statistics
-  # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
-  - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-  - coverage run -m py.test tests || exit 1
+  - tox
 
 after_success:
-  - coverage report
   - coveralls
 
 notifications:
