--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ before_script:
 
 script:
   # stop the build if there are Python syntax errors or undefined names
-  # FIXME: Add F821 to --select when Netflix-Skunkworks/cloudaux#63 is fixed
-  - flake8 . --count --select=E901,E999,F822,F823 --show-source --statistics
+  - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
   # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
   - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
   - coverage run -m py.test tests || exit 1
