--- a/tox.ini
+++ b/tox.ini
@@ -13,5 +13,5 @@ deps =
     .[openstack]
 commands =
     pytest --cov=cloudaux
-;    flake8 . --count --select=E901,E999,F822,F823 --show-source --statistics
-;    flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
+    flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
