Updating tox to use bleeding edge mikegrima moto.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py36
+envlist = py27,py37
 
 [testenv]
 usedevelop = True
@@ -21,6 +21,10 @@ deps =
     .[tests]
     .[gcp]
     .[openstack]
+
+    # Replace published moto with bleeding edge @mikegrima moto
+    pip uninstall moto
+    pip install -e git+https://github.com:mikegrima/moto.git@roletags#egg=moto
 
 commands =
     pytest {posargs} --cov=cloudaux cloudaux/tests/aws
