--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,8 @@ setenv =
 
 deps =
     ; This is needed because managed policy mocks aren't in the release just yet:
-    git+https://github.com/mikegrima/moto.git@instanceprofiles#egg=moto
+    ; git+https://github.com/mikegrima/moto.git@instanceprofiles#egg=moto
+    git+https://github.com/mikegrima/moto.git@roletags#egg=moto
 
     mock
     pytest
@@ -21,10 +22,6 @@ deps =
     .[tests]
     .[gcp]
     .[openstack]
-
-    # Replace published moto with bleeding edge @mikegrima moto
-    pip uninstall moto
-    pip install -e git+https://github.com:mikegrima/moto.git@roletags#egg=moto
 
 commands =
     pytest {posargs} --cov=cloudaux cloudaux/tests/aws
