Add IAM Role tagging (#95)
* Adding Tagging support to IAM Roles

* Bumping to v1.6.0

* Updating tox to use bleeding edge mikegrima moto.

* Fixing tox.ini

* Removing reference to old mikegrima moto branch

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py36
+envlist = py27,py37
 
 [testenv]
 usedevelop = True
@@ -13,7 +13,7 @@ setenv =
 
 deps =
     ; This is needed because managed policy mocks aren't in the release just yet:
-    git+https://github.com/mikegrima/moto.git@instanceprofiles#egg=moto
+    git+https://github.com/mikegrima/moto.git@roletags#egg=moto
 
     mock
     pytest
