Additional Cloudaux resources for GCP.
Fitbit has been using Security Monkey internally to monitor our GCP
environments and we'd like to start contributing back some of that code
to the main Security Monkey project.

This PR contains the following:
 * Support for GCE Instances
 * Support for GCE Persistent Disks
 * Support for GCE Addresses (global and regional)
 * Support for GCE Forwarding Rules (global and regional)
 * Support for CRM (i.e., Google Projects and their related IAM bindings)

I've also modified the `tox.ini` to enable the GCP tests which were
previously added but not hooked up to the CI.  In the process I've fixed
a broken GCP test.

This is a pre-requisite for Security Monkey watcher and auditor support
for these resource types.

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ deps =
     .[openstack]
 
 commands =
-    pytest {posargs} --cov=cloudaux cloudaux/tests/aws cloudaux/tests/openstack
+    pytest {posargs} --cov=cloudaux cloudaux/tests/aws cloudaux/tests/openstack cloudaux/tests/gcp
 ;    flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
 ;    flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
